// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  .c2 {
  background: #222222;
  border-right: 0;
  border: 1px solid #454545;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c3 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c3:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c3"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c3"
      >
        Review
      </span>
    </a>
  </nav>,
  .c2 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c1 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <section>
      <h3>
        CheckoutDelivery placeholder
      </h3>
    </section>
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/checkout/payment"
        onClick={[Function]}
      >
        Continue to Payment
      </a>
    </div>
  </section>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  .c3 {
  background: #222222;
  border-right: 0;
  border: 1px solid #454545;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c3:last-child {
  border-right: 1px;
}

.c2 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c3"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Review
      </span>
    </a>
  </nav>,
  .c11 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c10 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c4 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
}

.c7 {
  font-size: 1.2rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: normal;
}

.c1 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c6 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #9cc472;
}

.c8 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  color: #9cc472;
}

.c5 {
  float: right;
}

.c3 {
  margin: 0;
}

.c9 {
  font-size: 1.2rem;
  font-weight: bold;
}

.c2 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <section>
      <h3
        className="c1"
      >
        Order Summary
      </h3>
      <div
        className="c2"
      >
        <p
          className="c3"
        >
          <span
            className="c4"
          >
            Subtotal
            <span
              className="c5"
            >
              $125.00
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c6"
          >
            Kohl's Cash & Discounts
            <span
              className="c5"
            >
              -$18.75
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c7"
          >
            Shipping
            <span
              className="c5"
            >
              Free
            </span>
          </span>
        </p>
        <span
          className="c8"
        >
          You have earned free shipping.
        </span>
        <p
          className="c3"
        >
          <span
            className="c7"
          >
            Tax
            <span
              className="c5"
            >
              $6.38
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c9"
          >
            TOTAL
            <span
              className="c5"
            >
              $
              122.7
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c4"
          >
            Your Savings
            <span
              className="c5"
            >
              $122.70
            </span>
          </span>
        </p>
      </div>
    </section>
    <div
      className="c10"
    >
      <a
        className="c11"
        href="/checkout/review"
        onClick={[Function]}
      >
        Review Order
      </a>
    </div>
  </section>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  .c3 {
  background: #222222;
  border-right: 0;
  border: 1px solid #454545;
  color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c3:last-child {
  border-right: 1px;
}

.c2 {
  background: #ffffff;
  border-right: 0;
  border: 1px solid #454545;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px;
  width: 100%;
}

.c2:last-child {
  border-right: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
}

<nav
    className="c0"
  >
    <a
      className="c1"
      href="/checkout/delivery"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Delivery
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/payment"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Payment
      </span>
    </a>
    <a
      className="c1"
      href="/checkout/review"
      onClick={[Function]}
    >
      <span
        className="c3"
      >
        Review
      </span>
    </a>
  </nav>,
  .c11 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
}

.c10 {
  bottom: 0;
  left: 0;
  padding: 1.2rem;
  position: fixed;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,0.5);
}

.c4 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
}

.c7 {
  font-size: 1.2rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: normal;
}

.c1 {
  font-size: 1.8rem;
  text-align: center;
  margin: 10px;
}

.c6 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #9cc472;
}

.c8 {
  font-size: 1.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  color: #9cc472;
}

.c5 {
  float: right;
}

.c3 {
  margin: 0;
}

.c9 {
  font-size: 1.2rem;
  font-weight: bold;
}

.c2 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <section>
      <h3
        className="c1"
      >
        Order Summary
      </h3>
      <div
        className="c2"
      >
        <p
          className="c3"
        >
          <span
            className="c4"
          >
            Subtotal
            <span
              className="c5"
            >
              $125.00
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c6"
          >
            Kohl's Cash & Discounts
            <span
              className="c5"
            >
              -$18.75
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c7"
          >
            Shipping
            <span
              className="c5"
            >
              Free
            </span>
          </span>
        </p>
        <span
          className="c8"
        >
          You have earned free shipping.
        </span>
        <p
          className="c3"
        >
          <span
            className="c7"
          >
            Tax
            <span
              className="c5"
            >
              $6.38
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c9"
          >
            TOTAL
            <span
              className="c5"
            >
              $
              122.7
            </span>
          </span>
        </p>
        <p
          className="c3"
        >
          <span
            className="c4"
          >
            Your Savings
            <span
              className="c5"
            >
              $122.70
            </span>
          </span>
        </p>
      </div>
    </section>
    <div
      className="c10"
    >
      <a
        className="c11"
        href="/cart"
        onClick={[Function]}
      >
        Place Order
      </a>
    </div>
  </section>,
]
`;
